Changes for Venice, 0.4 alpha 14/Mar/2004
==========================================

* Chart Update:
  - Added RSI.

* Internationalised.
  - Chinese translation added (Bryan Lin).
  - Italian translation added (Alberto Nacher).

* Updates to the Gondola Language:
  - You can now specify just "close" instead of typing "lag(close, 0)".
    Simillarly for open, high, low & volume. So instead of typing
    "lag(close, 0) > lag(open, 0)" you now only need to type  "close > open".
  - The offset argument is now optional in the lag(), min(), max(), avg() and
    sum() functions. So instead of typing "avg(close, 30, 0)" you now only
    need to type "avg(close, 30)".
  - Added rsi() quote function.
  - Added corr() quote function for finding the correlation between
    two stock quotes.

* Updates to Usability:
  - Multiple copies of the Importer Module will no longer be displayed.
  - Multiple copies of the Preferences Module will no longer be displayed.

* Updates to Stock Quote Support:
  - Added experimental PostgreSQL support.

* Bug Fixes;
  - Fixed a bug preventing Portfolio deletion (Bryan Lin).
  - Fixed a bug when viewing a Portfolio created from a GP.
  - Fixed various graphing bugs (Bryan Lin, Andrew Leppard).
  - Fixed a bug when the paper trade could never afford to buy any stock.
  - The standard deviation calculation is now correct.

Changes for Venice, 0.3 alpha 14/Mar/2004
==========================================

* Added internet quote download.

* Added end-of-day Watch Screens.

* Stored Equation Updates:
  - Redesigned stored equations preferences page.
  - The stored equations preferences page is now accessible from all
    equation combo boxes (by right mouse click).
  - Fixed stored equation list in equation combo boxes.
  - Can now add/edit/delete stored equations from equation combo boxes.

* Table Updates:
  - Added "Find" feature to locate symbols in tables.
  - Equation column results are now displayed according to their type,